Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69394

memory corruption on startup caused by 5219c37f7c98f37f078fee00fe8ca35d83ff4f5d

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • None
    • 5.12
    • Core: Plugins
    • None
    • Linux/X11

      See attachments for traces. When I revert the following patch, then the issue goes away:

      commit 5219c37f7c98f37f078fee00fe8ca35d83ff4f5d
      Author: Thiago Macieira <thiago.macieira@intel.com>
      Date:   Wed Jun 20 15:20:32 2018 -0700
      
          QLibrary: find AVX2 (Haswell) optimized plugins and libraries
          
          Libraries are placed in a subdir "haswell/" of the main library dir,
          whereas plugins are simply named with ".avx2" appended to the plugin
          name (plugin.so.avx2). The "haswell/" library directory suffix is a
          convention found in glibc since version 2.26, whereas the ".avx2" and
          ".avx512" suffixes are a convention found in the Clear Linux OS for
          Intel Architecture.
          
          This patch implements this for all Unix OSes, except for Darwin, where
          the fat file format already has a sub-architecture for Haswell
          (x86_64h).
          
          We could also implement the "sse2/" subdir search for libraries, but I
          don't think it's worth the cost in 2018.
          
          Change-Id: Iff4151c519c144d580c4fffd1539fe5ee9a4d7b1
          Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
          Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
      

        1. elasticnodes.txt
          36 kB
        2. lscpu.txt
          1 kB
        3. systray.txt
          37 kB
        4. valgrind.txt
          86 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mikhailsvetkin Mikhail Svetkin
            paeglis Gatis Paeglis
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes